# Solenoid

./: CMakeLists.txt  README.txt  Readme.txt
MagneticField/: CIntegration.cpp  CIntegration.h  CMakeLists.txt  Force_profile.cpp  LinesOfForce.cpp  LinesOfForce_solenoid.cpp  MagneticFieldStable.h  MagneticFieldTest.cpp  MagneticFieldTest.cpp.autosave  Simulation.cpp  main.cpp
Tools/: CMakeLists.txt  CMathFunc.cpp  CMathFunc.h  CPoint3D.cpp  CPoint3D.h  CVector3D.cpp  CVector3D.h  CVector4D.cpp  CVector4D.h  ToolsStable.h  ToolsTest.cpp  UBaseTypes.h
